# chatd

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  motd.ans  rustfmt.toml  whitelist
.github/workflows/: build.yml  release.yml
examples/: server.rs
keys/: pass  pass.pub  test  test.pub
src/: cli.rs  logger.rs  main.rs  pubkey.rs
src/auth/: auth.rs  ban.rs  mod.rs  pubkey.rs  pubkey_file_manager.rs  set.rs
src/chat/: app.rs  input.rs  mod.rs  ratelimit.rs  session.rs  theme.rs  user.rs
src/chat/command/: command.rs  command_props.rs  commands_list.rs  oplist_command.rs  parse_error.rs  whitelist_command.rs
src/chat/message/: author.rs  message.rs  message_history.rs  mod.rs
src/chat/room/: member.rs  mod.rs  room.rs
src/chat/user/: config.rs  display_name.rs  mod.rs  status.rs  theme.rs  user.rs  username.rs
src/kmp/: mod.rs
src/models/: event.rs  mod.rs
src/server/: app.rs  auth.rs  ban.rs  client_info.rs  command.rs  connection.rs  env.rs  event.rs  handler.rs  history.rs  input.rs  input_handler.rs  input_history.rs  message.rs  mod.rs  motd.rs  ratelimit.rs  repository.rs  room.rs  server.rs  set.rs  state.rs  terminal.rs  theme.rs  tui.rs  user.rs
src/server/auth/: auth.rs  ban.rs  mod.rs  pk.rs  pk_loader.rs  pubkey.rs  pubkey_file_manager.rs
src/server/command/: command.rs  oplist_command.rs  whitelist_command.rs
src/server/control/: autocomplete_control.rs  command_control.rs  context.rs  control_handler.rs  env_control.rs  input_control.rs  mod.rs  terminal_control.rs
src/server/room/: command.rs  member.rs  message.rs  mod.rs  room.rs
src/server/room/app/: app.rs  input.rs  message_channel.rs  mod.rs  state.rs  terminal.rs
src/server/room/command/: command.rs  commands_list.rs  mod.rs  oplist_command.rs  parse_error.rs  whitelist_command.rs
src/server/room/user/: status.rs  theme.rs  timestamp_mode.rs
src/server/session/: handler.rs  mod.rs  repository.rs  tests.rs
src/server/session_workflow/: autocomplete.rs  command_exec.rs  command_parse.rs  context.rs  emacs_key_exec.rs  env_parse.rs  handler.rs  input_rate_checker.rs  input_validator.rs  mod.rs  terminal_key_mapper.rs
src/server/terminal/: handle.rs  input.rs  keyboard_decoder.rs  mod.rs  terminal.rs
src/server/user/: mod.rs  user.rs
src/terminal/: handle.rs  input.rs  input_history.rs  keyboard_decoder.rs  mod.rs  terminal.rs  unicode.rs
src/tui/: event.rs  mod.rs  render.rs  style.rs
src/utils/: datetime.rs  fs.rs  message.rs  mod.rs  rgb.rs  sanitize.rs  set.rs  ssh.rs
