[package]
name = "chatd"
version = "0.1.0"
edition = "2021"
authors = ["unrenamed <renkonazbka@gmail.com>"]
description = """
chatd is an implementation of an SSH server for real-time communication that 
serves a chat room instead of a shell and provides encrypted messaging over 
SSH.
"""
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/unrenamed/chatd"
repository = "https://github.com/unrenamed/chatd"
keywords = ["ssh", "chat", "ssh-chat", "ssh-server"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
futures = "0.3.30"
russh = { version = "0.43.0", features = ["openssl"] }
russh-keys = { version = "0.43.0", features = ["openssl"] }
tokio = { version = "1.36.0", features = ["io-std"] }
anyhow = "1.0.79"
async-trait = "0.1.77"
log = "0.4.20"
crossterm = "0.27.0"
terminal-keycode = "1.1.1"
rand = "0.8.5"
fnv = "1.0.7"
chrono = "0.4.38"
humantime = "2.1.0"
strum = { version = "0.26", features = ["derive"] }
enum_dispatch = "0.3.13"
circular-buffer = "0.1.7"
governor = "0.6.3"
nonzero_ext = "0.3.0"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
log4rs = "1.3.0"
regex = "1.10.5"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"
lazy_static = "1.5.0"
